--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -8,6 +8,7 @@
     "typescript": "3.3.3333"
   },
   "dependencies": {
+    "amqplib": "^0.5.5",
     "axios": "^0.19.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.1",
